--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - tensorflow-deps=2.10.0
   - pandas=2.0.0
   - pip:
+    - matplotlib==3.7.2
     - tensorflow-macos==2.12.0
     - tensorflow-metal==0.8.0
     - streamlit==1.24.1
